[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://gun.png" type="Texture" id=3]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Shoot"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -12 ), Vector2( 8, -8 ), Vector2( 8, -12 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 3
script = ExtResource( 1 )

[node name="Player" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 8, -12 )
texture = ExtResource( 3 )

[node name="BulletPos" type="Node2D" parent="."]
position = Vector2( 8, -21 )

[node name="ShotDelay" type="Timer" parent="."]

[node name="Camera2D" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shoot = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="timeout" from="ShotDelay" to="." method="_on_ShotDelay_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
